Fix some alignment issues with the share links.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -417,7 +417,7 @@ header[role="banner"] {
 		.share {
 			display: block;
 			float: right;
-			line-height: 1.5em;
+			line-height: .75em;
 			margin-top: 1.125em;
 		}
 	}
